Unit tests and bug fixes (#11)
* Add event and resolver unit tests

Add a suite of unit tests and small test controllers to improve coverage around HTTP events and error handling. New tests include additional-details, endpoint-exists flag, base event helpers, HTTP method enum, HTTP response event helpers, non-existent endpoint request body preservation, response event request data, and runtime-exception-resolver behavior (default and include-message=ALWAYS). Also add ResponseEventDataTestController and RuntimeExceptionResolverTestController. Update ErrorTestControllerTest to include assertions for server/client error response helpers.

* Rename endpointExists to endpointCalled

Replace the endpointExists property with endpointCalled throughout the codebase and update related logic and tests.

- Rename HttpRequestEvent/BaseHttpEvent field and builder usage to endpointCalled.
- Update CachedBodyHttpServletRequest, captor (RequestEndpointCalledCaptor), registry and publishers to set/check endpointCalled.
- Change property name to web-captor.event-details.include-endpoint-called in examples and test resources and update tests accordingly (renamed test packages/files where applicable).
- Update frontend types and UI (label and value) to reflect endpointCalled.
- Fix request wrapper unwrapping in HttpServletUtils by using WebUtils.getNativeRequest to handle decorated requests (e.g. multipart wrappers).
- Ensure HttpResponseEventPublisher publishes request/response wrapper objects and simplify RuntimeExceptionResolver to always include the error reason phrase.
- Add comprehensive EndpointCalledFlagTest to cover various HTTP scenarios (including multipart behavior) and add IDE run configurations for demo/frontend.

* Eagerly serialize multipart files & add previews

Eagerly capture multipart file bytes on the backend and add download/preview support in the frontend.

- Backend: add serializedFiles field and eager serialization in BodyPayload to capture base64 content before